--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,10 +5,17 @@ body {
 .header {
     padding: 60px;
     text-align: center;
-    color:crimson ;
+    color:rgb(228, 35, 132) ;
     font-size: 30px;
   }
   img {
     float: right;
   }
-  
+  footer{
+    clear: both;
+    width: 100%;
+    text-align: center;
+    background-color: #9c3089;
+    color: #f5f5f5;
+    padding: 20px;
+  } 
